tests/Call.def/Call.prop_m/Call.prop_m.3.0-old.check
// exitCode: 1
-- Error: target/tests/Call.def/Call.prop_m.scala:3:6 --------------------------
3 |  prop()
  |  ^^^^^^
  |  missing argument for parameter i of method apply: (i: Int): Char
1 error found
